Updated Mobile Video Gallery

--- a/_includes/html/video-gallery.html
+++ b/_includes/html/video-gallery.html
@@ -12,7 +12,7 @@
       <div class="js-light-box-txt">
         <div class="js-more-info">Show info</div>
           <h2>{{video.title}}</h2>
-          <span class="js-light-box-desc">{{video.text}}</span>
+          <span class="js-light-box-desc">{{video.desc}}</span>
       </div>
     </div>
   </div>
