--- a/_includes/scss/kokkaku.scss
+++ b/_includes/scss/kokkaku.scss
@@ -584,18 +584,21 @@ nav.tertiary-nav {
 }
 //   Responsive Video
 .responsive-video {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  width: 90%;
+  height: 90%;
   iframe {
-    position: absolute;
-    top: 33px;
-    left: 33px;
     width: 90%;
     height: 90%;
   }
   @media #{$mobile} {
-    top: 25%;
+    width: 100%;
+    height: 100%;
+    align: center;
+    top: 0;
+    left: 19px;
   }
 }
 
