--- a/_includes/scss/kokkaku.scss
+++ b/_includes/scss/kokkaku.scss
@@ -584,21 +584,15 @@ nav.tertiary-nav {
 }
 //   Responsive Video
 .responsive-video {
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  width: 90%;
-  height: 90%;
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
   iframe {
-    width: 90%;
-    height: 90%;
-  }
-  @media #{$mobile} {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    align: center;
-    top: 0;
-    left: 20px;
   }
 }
 
